Project

General

Profile

Actions

Bug #19542

closed

bluestore: segv in BlueStore::_osr_drain_preceding

Added by Sage Weil about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-04-06T19:13:15.655 INFO:tasks.ceph.osd.1.smithi117.stderr:*** Caught signal (Aborted) **
2017-04-06T19:13:15.655 INFO:tasks.ceph.osd.1.smithi117.stderr: in thread 7f1f6c4c8700 thread_name:tp_osd
2017-04-06T19:13:15.667 INFO:tasks.ceph.osd.1.smithi117.stderr: ceph version 12.0.0-2330-g880858b (880858be35b5b586cab1a9ca5605828c0c6de840)
2017-04-06T19:13:15.667 INFO:tasks.ceph.osd.1.smithi117.stderr: 1: (()+0xc7c072) [0x5578303b8072]
2017-04-06T19:13:15.667 INFO:tasks.ceph.osd.1.smithi117.stderr: 2: (()+0x113e0) [0x7f1f8217e3e0]
2017-04-06T19:13:15.667 INFO:tasks.ceph.osd.1.smithi117.stderr: 3: (pthread_cond_wait()+0xc0) [0x7f1f8217a3b0]
2017-04-06T19:13:15.667 INFO:tasks.ceph.osd.1.smithi117.stderr: 4: (std::condition_variable::wait(std::unique_lock<std::mutex>&)+0xc) [0x7f1f81a8091c]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 5: (BlueStore::_osr_drain_preceding(BlueStore::TransContext*)+0x23b) [0x55783028e5ab]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 6: (BlueStore::_split_collection(BlueStore::TransContext*, boost::intrusive_ptr<BlueStore::Collection>&, boost::intrusive_ptr<BlueStore::Collection>&, unsigned int, int)+0xb0) [0x55783028e8a0]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 7: (BlueStore::_txc_add_transaction(BlueStore::TransContext*, ObjectStore::Transaction*)+0x806) [0x5578302b74d6]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 8: (BlueStore::queue_transactions(ObjectStore::Sequencer*, std::vector<ObjectStore::Transaction, std::allocator<ObjectStore::Transaction> >&, boost::intrusive_ptr<TrackedOp>, ThreadPool::TPHandle*)+0x546) [0x5578302b9ce6]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 9: (ObjectStore::queue_transaction(ObjectStore::Sequencer*, ObjectStore::Transaction&&, Context*, Context*, Context*, boost::intrusive_ptr<TrackedOp>, ThreadPool::TPHandle*)+0x17c) [0x55782fea7d4c]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 10: (OSD::dispatch_context_transaction(PG::RecoveryCtx&, PG*, ThreadPool::TPHandle*)+0x6c) [0x55782fe3611c]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 11: (OSD::process_peering_events(std::__cxx11::list<PG*, std::allocator<PG*> > const&, ThreadPool::TPHandle&)+0x451) [0x55782fe82cb1]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 12: (ThreadPool::BatchWorkQueue<PG>::_void_process(void*, ThreadPool::TPHandle&)+0x27) [0x55782fec7a97]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 13: (ThreadPool::worker(ThreadPool::WorkThread*)+0xf2d) [0x55783042071d]
2017-04-06T19:13:15.668 INFO:tasks.ceph.osd.1.smithi117.stderr: 14: (ThreadPool::WorkThread::entry()+0x10) [0x557830421880]
2017-04-06T19:13:15.669 INFO:tasks.ceph.osd.1.smithi117.stderr: 15: (()+0x770a) [0x7f1f8217470a]
2017-04-06T19:13:15.669 INFO:tasks.ceph.osd.1.smithi117.stderr: 16: (clone()+0x6d) [0x7f1f811eb82d]
2017-04-06T19:13:15.669 INFO:tasks.ceph.osd.1.smithi117.stderr:2017-04-06 19:13:15.680241 7f1f6c4c8700 -1 *** Caught signal (Aborted) **
2017-04-06T19:13:15.669 INFO:tasks.ceph.osd.1.smithi117.stderr: in thread 7f1f6c4c8700 thread_name:tp_osd

/a/sage-2017-04-06_17:19:30-rados:thrash-wip-mgr-init---basic-smithi/993790
Actions #1

Updated by Sage Weil about 7 years ago

/a/sage-2017-04-06_19:43:41-rados-wip-sage-testing---basic-smithi/994089

Actions #2

Updated by Sage Weil about 7 years ago

pretty sure the deferred batcnh = 32 setting in https://github.com/ceph/ceph/pull/14306 is making this trigger more often.

Actions #3

Updated by Sage Weil about 7 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF