os/bluestore: make deferred_aggressive a counter

Multiple threads may run _osr_drain_preceding; use a count to
prevent the first finisher from prematurely disabling
aggressive mode.

Fixes: http://tracker.ceph.com/issues/19542
Signed-off-by: Sage Weil <sage@redhat.com>